# ResearchProj

./: .gitmodules  CHANGES.md  README.md
Augur/: ASSUMPTIONS.md  CITATIONS.md  README.md  SUBMISSION_BLOCK.md  check_anchors.py  reproduce.sh  synthesis.md
Caliper/: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
Caliper/.github/workflows/: ci.yml
Caliper/caliper/: __init__.py  baselines.py  conformal.py  estimator_maf.py  forward.py  metrics.py
Caliper/docs/: fashion_reproduction.md  index.md
Caliper/examples/: demo.py  fashion_repro.py
Caliper/tests/: test_baselines.py  test_conformal.py  test_estimator_maf.py  test_forward.py  test_metrics.py
Datum/: CHANGELOG.md  README.md  revalidate.py
Echo/: README.md  VERIFICATION.md  reproduce.sh
Fashion/: CHANGES.md  FLAGS.md  LEDGER_AUDIT.md  NUMBERS_FROZEN.txt  make_railing_figures.py
Forge/: RESULTS_mc_floor.md
Gauge/: .gitignore  README.md
Gnomon/: ASSUMPTIONS.md  VERIFICATION.md
Lethe/: ASSUMPTIONS.md  LETHE.md  PROMOTION.md  README.md  reproduce.sh
Levy/: ASSUMPTIONS.md  README.md  _paths.py  reproduce.sh  verify_cp1.py
Limbo/: .gitignore  ASSUMPTIONS.md  CITATIONS.md  IOP_CLASS_PROVENANCE.md  README.md  (+9 more)
Procrustes/procrustes-core/: .gitignore  POSITIONING.md  README.md  RESULTS.md  SUBMISSION_HOLD  pyproject.toml  release_config.json  release_gate.py  reproduce.sh
Procrustes/procrustes-core/experiments/: run_cp0.py  run_phase1.py  run_phase2.py  run_phase3.py
Procrustes/procrustes-core/paper/: build.sh  consistency.py  numbers.tex  procrustes.tex  refs.bib  verify_citations.py
Procrustes/procrustes-core/paper/figures/: make_figures.py
Procrustes/procrustes-core/procrustes/: __init__.py  baseline_monitor.py  bootstrap.py  config.py  conformal.py  deps.py  diagnostic.py  generators.py  seeding.py  separation.py
Procrustes/procrustes-core/results/: phase1_gateB.json  phase2_gateC.json  phase3_gateD.json
Procrustes/procrustes-core/tests/: test_boundaries.py  test_cp0_separation.py  test_diagnostic.py
(+211 files in other folders)
