[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "procrustes-core"
version = "0.1.0"
description = "Misspecification-aliasing of a calibrated error bar: heavy-tailed IVIM perfusion misspecification breaks the conditional coverage of the *well-identified* tissue-diffusion map. Distinct from within-model identifiability (Gauge). Fully synthetic; ground truth from the Lattice DRO."
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
]

[project.optional-dependencies]
# The non-bi-exponential ground truth is the Lattice digital reference object.
# Install it (editable from the monorepo) or set LATTICE_PATH / initialise the
# Lattice submodule; procrustes.deps locates it at import time.
test = ["pytest>=7.0"]
plots = ["matplotlib>=3.6"]

[tool.setuptools.packages.find]
where = ["."]
include = ["procrustes*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
